--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,14 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 upload_port = COM9
-monitor_speed = 9600
+monitor_port = COM9
+monitor_speed = 115200
+lib_deps = 
+  knolleary/PubSubClient@^2.8
+  bblanchon/ArduinoJson@^6.21.3
+  256dpi/MQTT@^2.5.1
+  rweather/Crypto@^0.4.0
+
+build_flags = 
+  -DMQTT_MAX_PACKET_SIZE=16384
 
